--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "calcit_std"
+name = "calcit_regex"
 version = "0.0.1"
 authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
 edition = "2018"
@@ -13,5 +13,6 @@ crate-type = ["dylib"] # Creates dynamic lib
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cirru_edn = "0.2.8"
-cirru_parser = "0.1.12"
+cirru_edn = "0.2.11"
+cirru_parser = "0.1.16"
+regex = "1.5.4"
