--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -12,22 +12,25 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
-        id: ACTIONS_ALLOW_UNSECURE_COMMANDS
-        run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
+      - uses: supplypike/setup-bin@v3
+        with:
+          uri: 'https://github.com/calcit-lang/calcit/releases/download/0.8.9/cr'
+          name: 'cr'
+          version: '0.8.9'
 
-      - name: add cr
-        run: |
-          mkdir -p $GITHUB_WORKSPACE/bin
-          wget -O $GITHUB_WORKSPACE/bin/cr http://repo.calcit-lang.org/binaries/linux/cr
-          chmod +x $GITHUB_WORKSPACE/bin/cr
-          echo "::add-path::$GITHUB_WORKSPACE/bin"
+      - uses: supplypike/setup-bin@v3
+        with:
+          uri: 'https://github.com/calcit-lang/calcit/releases/download/0.8.9/caps'
+          name: 'caps'
+          version: '0.8.9'
 
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
+
+      - uses: Swatinem/rust-cache@v2
 
       - run: cargo build --release
 
