--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: calcit-lang/setup-cr@0.0.3
         with:
-          version: "0.8.50"
+          version: "0.8.51-a1"
 
       - uses: dtolnay/rust-toolchain@stable
         with:
